build(workspace): added workspace project

--- a/nx.json
+++ b/nx.json
@@ -45,27 +45,5 @@
             "style": "scss"
         }
     },
-    "defaultProject": "kafka-tools",
-    "workspace": {
-        "root": ".",
-        "targets": {
-            "version": {
-                "executor": "@jscutlery/semver:version",
-                "options": {
-                    "syncVersions": true,
-                    "commitMessageFormat": "chore(${projectName}): release version ${version}",
-                    "baseBranch": "main",
-                    "postTargets": ["workspace:github"]
-                }
-            },
-            "github": {
-                "executor": "@jscutlery/semver:github",
-                "options": {
-                    "tag": "${version}",
-                    "title": "Release ${version}",
-                    "generateNotes": true
-                }
-            }
-        }
-    }
+    "defaultProject": "kafka-tools"
 }
