--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@nrwl/jest": "13.8.4",
         "@nrwl/linter": "13.8.4",
         "@nrwl/node": "^13.8.4",
+        "@nrwl/nx-cloud": "^13.1.6",
         "@nrwl/tao": "13.8.4",
         "@nrwl/web": "^13.8.4",
         "@nrwl/workspace": "13.8.4",
