build(workspace): fixed commit checks job name

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -2,7 +2,7 @@ name: commit-checks
 on: [push]
 
 jobs:
-  lint:
+  commit-checks:
     runs-on: windows-2022
     if: ${{ github.event_name == 'push' }}
     steps:
