build(workspace): added env NX_CLOUD_DISTRIBUTED_EXECUTION

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -1,6 +1,9 @@
 name: commit-checks
 on: [push]
 
+env:
+  NX_CLOUD_DISTRIBUTED_EXECUTION: true
+
 jobs:
   commit-checks:
     runs-on: windows-2022
