build(workspace): get -> target

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -23,7 +23,7 @@ jobs:
           echo "HEAD: ${{ env.NX_HEAD }}"
       - run: npm ci
       - run: npx nx-cloud start-ci-run
-      - run: npx nx affected --get=build
+      - run: npx nx affected --target=build
       - run: npx nx affected --target=test --parallel
       - run: npx nx affected --target=lint
       - run: npx nx-cloud stop-all-agents
