build(workspace): removed echos

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -10,7 +10,7 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v2
-        name: Checkout [lint]
+        name: Checkout [commit-checks]
         with:
           fetch-depth: 0
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
@@ -18,9 +18,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "14"
-      - run: |
-          echo "BASE: ${{ env.NX_BASE }}"
-          echo "HEAD: ${{ env.NX_HEAD }}"
       - run: npm ci
       - run: npx nx-cloud start-ci-run
       - run: npx nx affected --target=build
