build(tauri-client): re-added build cache

--- a/apps/tauri-client/project.json
+++ b/apps/tauri-client/project.json
@@ -8,7 +8,8 @@
             "options": {
                 "commands": [
                     "cd ./apps/tauri-client && npm i && npm run tauri build"
-                ]
+                ],
+                "outputPath": "apps/tauri-client/src-tauri/target"
             }
         },
         "serve": {
