--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -60,19 +60,17 @@ jobs:
       - name: setup node
         uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 14
       - name: install Rust stable
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - name: Sets up and uses rust cache
-        uses: Swatinem/rust-cache@v1
       - name: install webkit2gtk (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
-      - name: npm ci
-        run: npm ci
+      - name: npm install
+        run: npm install
       - name: build tauri-client
         run: npx nx build tauri-client
