build(tauri-client): added NX_CLOUD_DISTRIBUTED_EXECUTION false

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -52,6 +52,8 @@ jobs:
 
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
+    env:
+      NX_CLOUD_DISTRIBUTED_EXECUTION: false
 
     runs-on: ${{ matrix.platform }}
 
