--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -74,5 +74,7 @@ jobs:
           sudo apt-get install -y webkit2gtk-4.0
       - name: npm install
         run: npm install
+      - name: build kafka-tools
+        run: npx nx build kafka-tools
       - name: build tauri-client
         run: npx nx build tauri-client
