build(tauri-client): added os input to nx cache

--- a/apps/tauri-client/project.json
+++ b/apps/tauri-client/project.json
@@ -8,8 +8,11 @@
             "options": {
                 "commands": [
                     "cd ./apps/tauri-client && npm i && npm run tauri build"
-                ]
-            }
+                ],
+                "outputPath": "apps/tauri-client/src-tauri/target/release"
+            },
+
+            "runtimeCacheInputs": ["node log-os.js"]
         },
         "serve": {
             "executor": "@nrwl/workspace:run-commands",
