3 fix tauri build (#20)
* build(workspace): fixed parallel builds and added nx cloud

* build(workspace): fixed commit checks job name

* build(workspace): added env NX_CLOUD_DISTRIBUTED_EXECUTION

* build(workspace): added base and head logging

* build(workspace): added webkit2gtk install on ubuntu agents

* build(workspace): fixed merge issues

* build(workspace): get -> target

* build(workspace): removed echos

* build(workspace): added a tauri build on mac windows and linux on every commit

* build(workspace): removed step to uninstall tauri locally

* build(workspace): implemented rust cache

* build(tauri-client): removed output caching

* build(tauri-client): re-added build cache

* build(tauri-client): re added tarui uninstall

* build(tauri-client): downgraded tauri build version

* build(tauri-client): removed step uninstall tauri locally

* build(tauri-client): added NX_CLOUD_DISTRIBUTED_EXECUTION false

* chore(kafka-tools): updated icons

* build(tauri-client): removed implicit dependencies

* build(tauri-client): build kafka tools before build

* build(tauri-client): re added implicit dependencies

* build(tauri-client): added os input to nx cache

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -10,18 +10,15 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v2
-        name: Checkout [lint]
+        name: Checkout [commit-checks]
         with:
           fetch-depth: 0
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: "14"
-      - run: |
-          echo "BASE: ${{ env.NX_BASE }}"
-          echo "HEAD: ${{ env.NX_HEAD }}"
-      - run: npm ci
+          node-version: 16
+      - run: npm install
       - run: npx nx-cloud start-ci-run
       - run: npx nx affected --target=build
       - run: npx nx affected --target=test --parallel
@@ -29,8 +26,8 @@ jobs:
       - run: npx nx-cloud stop-all-agents
 
   agents:
-    runs-on: ubuntu-latest
-    name: Agent 1
+    runs-on: windows-2022
+    name: build test lint
     timeout-minutes: 60
     strategy:
       matrix:
@@ -40,6 +37,39 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "14"
-      - run: npm install
+      - run: npm ci
       - name: Start Nx Agent ${{ matrix.agent }}
         run: npx nx-cloud start-agent
+
+  build-tauri:
+    strategy:
+      fail-fast: false
+
+      matrix:
+        platform: [macos-latest, ubuntu-latest, windows-latest]
+    env:
+      NX_CLOUD_DISTRIBUTED_EXECUTION: false
+
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: install Rust stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: install webkit2gtk (ubuntu only)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y webkit2gtk-4.0
+      - name: npm install
+        run: npm install
+      - name: build kafka-tools
+        run: npx nx build kafka-tools
+      - name: build tauri-client
+        run: npx nx build tauri-client
