--- a/apps/tauri-client/project.json
+++ b/apps/tauri-client/project.json
@@ -9,8 +9,10 @@
                 "commands": [
                     "cd ./apps/tauri-client && npm i && npm run tauri build"
                 ],
-                "outputPath": "apps/tauri-client/src-tauri/target"
-            }
+                "outputPath": "apps/tauri-client/src-tauri/target/release"
+            },
+
+            "runtimeCacheInputs": ["node log-os.js"]
         },
         "serve": {
             "executor": "@nrwl/workspace:run-commands",
