--- a/package.json
+++ b/package.json
@@ -1,66 +1,68 @@
 {
-    "name": "kafka-tools",
-    "version": "0.1.3",
-    "license": "MIT",
-    "scripts": {
-        "ng": "nx",
-        "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-        "start": "nx serve",
-        "build": "nx build",
-        "test": "nx test",
-        "prepare": "husky install"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "13.2.5",
-        "@angular/common": "13.2.5",
-        "@angular/compiler": "13.2.5",
-        "@angular/core": "13.2.5",
-        "@angular/forms": "13.2.5",
-        "@angular/platform-browser": "13.2.5",
-        "@angular/platform-browser-dynamic": "13.2.5",
-        "@angular/router": "13.2.5",
-        "@nrwl/angular": "13.8.4",
-        "@nrwl/js": "13.8.4",
-        "rxjs": "7.5.4",
-        "tslib": "2.3.1",
-        "zone.js": "0.11.5"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "13.2.5",
-        "@angular-eslint/eslint-plugin": "13.1.0",
-        "@angular-eslint/eslint-plugin-template": "13.1.0",
-        "@angular-eslint/template-parser": "13.1.0",
-        "@angular/cli": "13.2.5",
-        "@angular/compiler-cli": "13.2.5",
-        "@angular/language-service": "13.2.5",
-        "@commitlint/cli": "16.2.1",
-        "@commitlint/config-conventional": "16.2.1",
-        "@commitlint/config-nx-scopes": "16.2.1",
-        "@jscutlery/semver": "2.20.0",
-        "@nrwl/cli": "13.8.4",
-        "@nrwl/cypress": "13.8.4",
-        "@nrwl/eslint-plugin-nx": "13.8.4",
-        "@nrwl/jest": "13.8.4",
-        "@nrwl/linter": "13.8.4",
-        "@nrwl/node": "13.8.4",
-        "@nrwl/nx-cloud": "13.1.6",
-        "@nrwl/tao": "13.8.4",
-        "@nrwl/web": "13.8.4",
-        "@nrwl/workspace": "13.8.4",
-        "@types/jest": "27.4.1",
-        "@types/node": "16.11.7",
-        "@typescript-eslint/eslint-plugin": "5.10.2",
-        "@typescript-eslint/parser": "5.10.2",
-        "cypress": "9.5.1",
-        "eslint": "8.10.0",
-        "eslint-config-prettier": "8.5.0",
-        "eslint-plugin-cypress": "2.12.1",
-        "husky": "7.0.4",
-        "jest": "27.5.1",
-        "jest-preset-angular": "11.1.1",
-        "prettier": "2.5.1",
-        "ts-jest": "27.1.3",
-        "typescript": "4.5.5"
-    }
+  "name": "kafka-tools",
+  "version": "0.1.3",
+  "license": "MIT",
+  "scripts": {
+    "ng": "nx",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "prepare": "husky install"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "13.2.5",
+    "@angular/cdk": "^13.2.6",
+    "@angular/common": "13.2.5",
+    "@angular/compiler": "13.2.5",
+    "@angular/core": "13.2.5",
+    "@angular/forms": "13.2.5",
+    "@angular/material": "^13.2.6",
+    "@angular/platform-browser": "13.2.5",
+    "@angular/platform-browser-dynamic": "13.2.5",
+    "@angular/router": "13.2.5",
+    "@nrwl/angular": "13.8.4",
+    "@nrwl/js": "13.8.4",
+    "rxjs": "7.5.4",
+    "tslib": "2.3.1",
+    "zone.js": "0.11.5"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "13.2.5",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
+    "@angular/cli": "13.2.5",
+    "@angular/compiler-cli": "13.2.5",
+    "@angular/language-service": "13.2.5",
+    "@commitlint/cli": "16.2.1",
+    "@commitlint/config-conventional": "16.2.1",
+    "@commitlint/config-nx-scopes": "16.2.1",
+    "@jscutlery/semver": "2.20.0",
+    "@nrwl/cli": "13.8.4",
+    "@nrwl/cypress": "13.8.4",
+    "@nrwl/eslint-plugin-nx": "13.8.4",
+    "@nrwl/jest": "13.8.4",
+    "@nrwl/linter": "13.8.4",
+    "@nrwl/node": "13.8.4",
+    "@nrwl/nx-cloud": "13.1.6",
+    "@nrwl/tao": "13.8.4",
+    "@nrwl/web": "13.8.4",
+    "@nrwl/workspace": "13.8.4",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "cypress": "9.5.1",
+    "eslint": "8.10.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.1",
+    "prettier": "2.5.1",
+    "ts-jest": "27.1.3",
+    "typescript": "4.5.5"
+  }
 }
