chore(kafka-tools): added the tauri-cli and a window-controls component

--- a/apps/kafka-tools/tsconfig.json
+++ b/apps/kafka-tools/tsconfig.json
@@ -22,7 +22,8 @@
         "noFallthroughCasesInSwitch": true,
 
         "paths": {
-            "@kafka-tools/features/*": ["apps/kafka-tools/src/app/features/*"]
+            "@kafka-tools/features/*": ["apps/kafka-tools/src/app/features/*"],
+            "@kafka-tools/modules/*": ["apps/kafka-tools/src/app/modules/*"]
         }
     },
     "angularCompilerOptions": {
