--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "13.2.5",
     "@nrwl/angular": "13.8.4",
     "@nrwl/js": "13.8.4",
+    "@tauri-apps/api": "^1.0.0-beta.8",
     "rxjs": "7.5.4",
     "tslib": "2.3.1",
     "zone.js": "0.11.5"
