--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/router": "13.2.5",
         "@fortawesome/angular-fontawesome": "^0.10.1",
         "@fortawesome/fontawesome-svg-core": "1.3.0",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@nrwl/angular": "13.8.4",
         "@nrwl/js": "13.8.4",
