--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "singleQuote": true,
-  "tabWidth": 4,
-  "arrowParens": "avoid"
+    "singleQuote": true,
+    "tabWidth": 4,
+    "arrowParens": "avoid",
+    "singleAttributePerLine": false
 }
