build(workspace): added kafka-tools to the implcit dependencys

--- a/workspace/project.json
+++ b/workspace/project.json
@@ -21,5 +21,5 @@
             }
         }
     },
-    "implicitDependencies": ["tauri-client"]
+    "implicitDependencies": ["tauri-client", "kafka-tools"]
 }
