--- a/apps/tauri-client/src-tauri/Cargo.toml
+++ b/apps/tauri-client/src-tauri/Cargo.toml
@@ -18,6 +18,9 @@ tauri-build = { version = "1.0.0-beta.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "fs-all", "window-all"] }
+rdkafka = { version = "0.25", features = ["cmake-build"] }
+tokio = { version = "1.0", features = ["full"]}
+async-trait = "0.1.52"
 
 [features]
 default = [ "custom-protocol" ]
