chore(kafka-tools): added some basic styling to the consumer

--- a/apps/kafka-tools/tsconfig.json
+++ b/apps/kafka-tools/tsconfig.json
@@ -23,7 +23,10 @@
 
         "paths": {
             "@kafka-tools/features/*": ["apps/kafka-tools/src/app/features/*"],
-            "@kafka-tools/modules/*": ["apps/kafka-tools/src/app/modules/*"]
+            "@kafka-tools/modules/*": ["apps/kafka-tools/src/app/modules/*"],
+            "@kafka-tools/interfaces/*": [
+                "apps/kafka-tools/src/app/_interfaces/*"
+            ]
         }
     },
     "angularCompilerOptions": {
