chore(kafka-tools): bumped build limits

--- a/apps/kafka-tools/project.json
+++ b/apps/kafka-tools/project.json
@@ -35,8 +35,8 @@
                         },
                         {
                             "type": "anyComponentStyle",
-                            "maximumWarning": "500kb",
-                            "maximumError": "500kb"
+                            "maximumWarning": "1.5mb",
+                            "maximumError": "2mb"
                         }
                     ],
                     "fileReplacements": [
