--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -46,16 +46,20 @@ jobs:
       fail-fast: false
 
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        include:
+          - os: macos-latest
+          - os: ubuntu-latest
+          - os: windows-latest
+            features: cmake-build
     env:
       NX_CLOUD_DISTRIBUTED_EXECUTION: false
 
-    runs-on: ${{ matrix.platform }}
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
       - name: Get latest CMake and ninja
-        uses: lukka/get-cmake@v3.22.2
+        # uses: lukka/get-cmake@v3.22.2
       - name: setup node
         uses: actions/setup-node@v3
         with:
