--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -46,7 +46,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        platform: [macos-latest, ubuntu-latest, windows-2019]
     env:
       NX_CLOUD_DISTRIBUTED_EXECUTION: false
 
