ci: fixed the ci file

--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -54,8 +54,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Get latest CMake and ninja
-        # uses: lukka/get-cmake@v3.22.2
+      # - name: Get latest CMake and ninja
+      # uses: lukka/get-cmake@v3.22.2
       - name: setup node
         uses: actions/setup-node@v3
         with:
