ci(workspace): updated workspace root

--- a/workspace/project.json
+++ b/workspace/project.json
@@ -1,5 +1,5 @@
 {
-    "root": "workspace",
+    "root": "../",
     "sourceRoot": "workspace",
     "projectType": "application",
     "targets": {
