chore(kafka-tools): added a toaster store

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,6 +59,9 @@
                             "FunctionDeclaration": true,
                             "MethodDefinition": true,
                             "ClassDeclaration": false
+                        },
+                        "exempt": {
+                            "exemptEmptyConstructors": true
                         }
                     }
                 ]
