--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@fortawesome/fontawesome-svg-core": "1.3.0",
         "@fortawesome/free-regular-svg-icons": "6.0.0",
         "@fortawesome/free-solid-svg-icons": "6.0.0",
+        "@ngrx/component-store": "^13.1.0",
         "@nrwl/angular": "13.8.4",
         "@nrwl/js": "13.8.4",
         "@tauri-apps/api": "1.0.0-beta.8",
