--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "singleQuote": true,
     "tabWidth": 4,
     "arrowParens": "avoid",
-    "singleAttributePerLine": false
+    "singleAttributePerLine": false,
+    "trailingComma": "none"
 }
