--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 16
       - run: npm install
       - run: npx nx-cloud start-ci-run
-      - run: npx nx affected --target=build --parallel=false
+      - run: npx nx affected --target=build --parallel=false --skip-nx-cache=true
       - run: npx nx affected --target=test --parallel=false
       - run: npx nx affected --target=lint --parallel=false
       - run: npx nx-cloud stop-all-agents
