--- a/.github/workflows/commit-checks.yml
+++ b/.github/workflows/commit-checks.yml
@@ -71,6 +71,6 @@ jobs:
         run: npm install
       - name: build kafka-tools
 
-        run: npx nx build kafka-tools --skip-nx-cache=true
+        run: npx nx build kafka-tools
       - name: build tauri-client
-        run: npx nx build tauri-client --skip-nx-cache=true
+        run: npx nx build tauri-client
