--- a/apps/tauri-client/src-tauri/Cargo.toml
+++ b/apps/tauri-client/src-tauri/Cargo.toml
@@ -18,10 +18,16 @@ tauri-build = { version = "1.0.0-beta.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "fs-all", "window-all"] }
-rdkafka = { version = "0.28", features = ["cmake-build"] }
+
 tokio = { version = "1.0", features = ["full"] }
 async-trait = "0.1.52"
 futures = "0.3.21"
+
+[target.'cfg(windows)'.dependencies]
+rdkafka = { version = "0.28", features = ["cmake-build"] }
+
+[target.'cfg(unix)'.dependencies]
+rdkafka = { version = "0.28" }
 
 [features]
 default = [ "custom-protocol" ]
